Added numerous new features like reverse mode, overwriting, clearing output folder, and verifying the track actually exists

--- a/LECodeBSTRMMassRenamer/appsettings.json
+++ b/LECodeBSTRMMassRenamer/appsettings.json
@@ -1,6 +1,11 @@
 {
   "ConfigFile": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\config.txt", //This is the path of the config file used for your LE-Code distribution.
   "BRSTMInputFolder": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\brstm", //This is the input directory containing the brstm files you wish to use for your tracks.
-  "BRSTMOutputFolder": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\brstm\\output", //This will be where the renamed brstm files will be copied to.
-  "TracksBMGFile": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\tracks.bmg.txt" //This is the unedited output file of the command wctct bmg --le-code --long CONFIG.TXT>TRACKS.BMG.TXT
+  "BRSTMOutputFolder": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\sqlmkw\\sound\\strm", //This will be where the renamed brstm files will be copied to.
+  "TracksBMGFile": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\tracks.bmg.txt", //This is the unedited output file of the command wctct bmg --le-code --long CONFIG.TXT>TRACKS.BMG.TXT
+  "AllowFileOverwriting": false, // If true, will overwrite any files in the output directory.
+  "ReversedMode": false, // If true, searches for files named the same as the track hex value and renames them to the original track file name.
+  "ClearOutputFolder": true, // If true, will delete all files in the output directory prior to starting.
+  "VerifyTrackFileExists": true, // If true, will verify the szs file exists in your tracks folder and will only copy files over if the track exists.
+  "TracksFolder": "E:\\Games\\MKWiiModding\\MKWiiSquadSelects\\sqlmkw\\course" //This is the directory of your track szs files for your pack.  Use this if verify track file is set to true
 }
